@startuml

class UIManager {
    ..Fields..
    ..Methods..
    void newScan()
    void getSavedScan()
}

class MenuHandler {
    + static void MenuHandler()
}

class Program {
    ..Fields..
    - AnalyseManager analyseManager
    - DBManager dbManager
    - FileManager fileManager
    - AnalysesResult AnalysesResult
    
    ..Methods..
    +Start()
    +NewScan()
    +SaveResult()
    +DiscardResult()
    +GetResults()
}

class AnalyseManager {
    ..Fields..
    - int Threads { get; set; }
    - Queue<string> Text { get; set; }
    - AnalysesResult Result { get; set; }
    - string Word { get; set; }
    ..Methods..
    + StartAnalysis() : AnalyzerResult
    - TotalWordCount()
    - TotalCharCount()
    - CheckLongestWord()
    - HeatmapWord()
    - HeatmapChar()
    
}

class AnalysesResult {
    ..Fields..
    + TotalWordCount {get; set;}
    + TotalCharCount {get; set;}
    + LongestWord {get; set;}
    + HeatmapWord {get; set;}
    + HeatmapChar {get; set;}
    ..Methods..
    + ToString()
}

class DBManager {
    ..Fields..
    - AnalysesResult AnalysesResult
    ..Methods..
    + saveData()
    + retrieveData()
}

class FileManager {
    ..Fields..
    ..Methods..
    + getText()
}

UIManager <--> Program
UIManager <- MenuHandler

AnalyseManager <-> Program
AnalyseManager <-- AnalysesResult
AnalysesResult -> DBManager

Program <-> FileManager 

Program <--> DBManager 

@enduml